# bot_core

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  asynchttp.cxx  asynchttp.hxx  changelog.txt  config_manager.cxx  config_manager.hxx  core.cxx  core.hxx  global_sdk.hxx  globals.cxx  globals.hxx  httpclient.cxx  httpclient.hxx  logger.cxx  logger.hxx  lua_natives.cxx  lua_natives.hxx  main.cxx  main.hxx  main_script.cxx  main_script.hxx  minor_scripts.cxx  minor_scripts.hxx  plugin_manager.cxx  plugin_manager.hxx  prebuild-libs.ps1  tick_sys.hxx  utils.cxx  utils.hxx
.github/workflows/: cmake-multi-platform.yml
compiler/: CMakeLists.txt  compiler.cxx
libs/: CMakeLists.txt
src/: config_manager.cxx  global_sdk.hxx  logger.hxx  lua_natives.cxx  lua_natives.hxx  main.cxx  main.hxx  main_script.cxx  minor_scripts.cxx  minor_scripts.hxx  plugin_manager.cxx  plugin_manager.hxx  plugins_sdk.cxx  plugins_sdk.hxx  tick_sys.cxx  utils.hxx
